primeira comunicacao do front com o backend

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "hackathon"
+  "defaultProject": "hackathon",
+  "cli": {
+    "analytics": false
+  }
 }
